see source code and the LICENSE file

2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 3, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note3

04-Apr-2013 Mark Dexter
 # Reverting [#30430] Severe bug with "com_content" component routing.

04-Apr-2013 Jean-Marie Simonet
 # [#30454] Tags: Adding Tags via Batch function replaces all previous tags. Thanks David and Elin.
 # [#30463] Missing closing div in compact tag layout. Thanks Thomas Hunziker and Constantin Romankiewicz
 # [#30464] ACL Undefined variable error in contentadministrator.php on line 112. Thanks Constantin Romankiewicz 
 # [#30062] Base Item option in mod_menu has no effect [regression]. Thanks René Alain Erichsen
 # [#30422] Tags drill down incorrectly finds match to multi-tag tagged items menu item. Thanks Mark
 # [#30210] Undefined index errors by using the style 'beezTabs' at an beez template. Thanks Constantin Romankiewicz
 # [#30444] Newfeeds Hide icon wrong colour
 # [#30450] Remove moduleclass suffix from <input> and <button> elements in mod_search. Thanks Thomas Hunziker
 # [#29377] Image select. Thanks Constantin Romankiewicz
 # [#29961] RAW filter is missing for JInput. Thanks Cedric Keiflin
 # [#30427] Remove 1.5 html methods from com_newsfeeds. Thanks Elin
 # [#30430] Severe bug with "com_content" component routing. Thanks sajal soni and Elin.

03-Apr-2013 Jean-Marie Simonet
 # [#30349] Cleaned up use of database & query objects. Thanks Peter van Westen and Michael Babker

-------------------- 3.1 Beta 3 Release [30-Mar-2012] ------------------

29-Mar-2013 Michael Babker
 # [#30391] Fixes array not being initialized.  Thanks Peter
 # [#30317] Synch session check bug fix from platform.  Thanks Elin